EOS-13087 S3 - Update Authserver ports
Signed-off-by: abhilekh <abhilekh.mustapure@seagate.com>

--- a/scripts/haproxy/haproxy_osver8.cfg
+++ b/scripts/haproxy/haproxy_osver8.cfg
@@ -167,9 +167,9 @@ backend s3-auth
     # option log-health-checks
     default-server inter 2s fastinter 100 rise 1 fall 5 on-error fastinter
 
-    server s3authserver-instance1 0.0.0.0:9085 #check ssl verify required ca-file /etc/ssl/stx-s3/s3auth/s3authserver.crt   # s3 auth server instance 1
-    # server s3authserver-2 s3auth-node2:9086 check ssl verify required ca-file /etc/ssl/stx-s3/s3auth/s3authserver.crt   # s3 auth server instance 2
-    # server s3authserver-3 s3auth-node3:9086 check ssl verify required ca-file /etc/ssl/stx-s3/s3auth/s3authserver.crt   # s3 auth server instance 3
-    # server s3authserver-4 s3auth-node4:9086 check ssl verify required ca-file /etc/ssl/stx-s3/s3auth/s3authserver.crt   # s3 auth server instance 4
+    server s3authserver-instance1 0.0.0.0:28050
+    # server s3authserver-2 s3auth-node2:28051 check ssl verify required ca-file /etc/ssl/stx-s3/s3auth/s3authserver.crt   # s3 auth server instance 2
+    # server s3authserver-3 s3auth-node3:28051 check ssl verify required ca-file /etc/ssl/stx-s3/s3auth/s3authserver.crt   # s3 auth server instance 3
+    # server s3authserver-4 s3auth-node4:28051 check ssl verify required ca-file /etc/ssl/stx-s3/s3auth/s3authserver.crt   # s3 auth server instance 4
 
-    #server s3authserver 0.0.0.0:9085 check             # s3 auth server No SSL
+    #server s3authserver 0.0.0.0:28050 check             # s3 auth server No SSL
